# discrakt

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  compile.ps1  credentials.ini  credentials.py  disakt.py  discrackt.py  discrakt.py  discrakt.spec  mise.toml  pyproject.toml  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.githooks/: install.sh  pre-commit
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  lint.yml  publish.yml  release-macos.yml  release.yml
assets/: Discrakt.icns  Package.wxs  discrakt.desktop
images/demo/: discrakt.psd
setup-ui/: .gitignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
setup-ui/src/: App.tsx  index.css  main.tsx
setup-ui/src/components/: brand-icons.tsx  theme-provider.tsx
setup-ui/src/components/ui/: button.tsx  card.tsx  collapsible.tsx  input.tsx  label.tsx  tabs.tsx
setup-ui/src/lib/: api.ts
src/: autostart.rs  config.rs  discord.rs  jellyfin_auth.rs  lib.rs  main.rs  metadata.rs  plex_auth.rs  retry.rs  state.rs  trakt.rs  tray.rs  tray_linux.rs  utils.rs
src/discord/: client.rs  payload.rs
src/setup/: html.rs  mod.rs  server.rs
src/source/: jellyfin.rs  mod.rs  plex.rs  trakt.rs
tests/: discord_tests.rs  jellyfin_auth_tests.rs  plex_auth_tests.rs  setup_tests.rs  source_tests.rs  state_tests.rs  trakt_tests.rs  utils_tests.rs
tests/common/: fixtures.rs  mod.rs  watching.rs
