[package]
name = "discrakt"
version = "2.2.3"
edition = "2021"
authors = ["afonsojramos"]
description = "Easy to Use Trakt/Plex Discord Rich Presence"
repository = "https://github.com/afonsojramos/discrakt"
license = "MIT"
keywords = ["discord", "trakt", "rust"]
readme = "README.md"
exclude = [".github/*", "images/*.psd", "credentials.ini", ".gitignore"]

[dependencies]
discord-rich-presence = "0.2.5"
ureq = { version = "2.12.1", features = ["json"] }
configparser = { version = "3.1.0", features = ["indexmap"] }
serde = { version = "1.0.226", features = ["derive"] }
chrono = "0.4.41"
webbrowser = "1.0.5"
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = "debuginfo"
