[package]
name = "discrakt"
version = "2.2.3"
edition = "2021"
authors = ["afonsojramos"]
description = "Easy to Use Trakt/Plex Discord Rich Presence"
repository = "https://github.com/afonsojramos/discrakt"
license = "MIT"
keywords = ["discord", "trakt", "rust"]
readme = "README.md"
exclude = [".github/*", "images/*.psd", "credentials.ini", ".gitignore"]

[dependencies]
discord-rich-presence = "0.2.5"
ureq = { version = "2.12.1", features = ["json"] }
configparser = { version = "3.1.0", features = ["indexmap"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
webbrowser = "1.0.6"
dirs = "6.0.0"
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
crossbeam-channel = "0.5"
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.2"
objc2-foundation = "0.2"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
opt-level = "z"

[package.metadata.bundle]
name = "Discrakt"
identifier = "com.afonsojramos.discrakt"
icon = ["assets/Discrakt.icns"]
version = "2.2.3"
copyright = "Copyright (c) 2024 afonsojramos. All rights reserved."
category = "public.app-category.utilities"
short_description = "Trakt to Discord Rich Presence"
long_description = """
Discrakt bridges your Trakt.tv watching status to Discord Rich Presence.
It runs silently in your system tray and automatically updates your Discord
status when you're watching movies or TV shows tracked by Trakt.tv.
"""
osx_minimum_system_version = "10.13"
